Bulk edit of files

--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -1,10 +1,4 @@
-.light-background {
-  background-color: #FCFCFC;
-}
-
-.dark-background {
-  background-color: #EFEFEF;
-}
+@import 'background.scss';
 
 .is-vertically-centered {
   display: flex;
